--- a/task-creation.html
+++ b/task-creation.html
@@ -24,7 +24,7 @@
                 <div class="row  align-items-center">
                     <div class="col-lg-3 col-6">
                         <div class="logo-area">
-                            <a href="index.html"><img src="assets/img/Logo.png" alt=""></a>
+                            <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 d-none d-lg-block text-center">
