--- a/brand-profile.html
+++ b/brand-profile.html
@@ -6,7 +6,7 @@
         <title>Site Title Here</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="shortcut icon" type="image/x-icon" href="#">
+		<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.svg">
         <!-- Place favicon.ico in the root directory -->
         
 		<!-- CSS here -->
@@ -231,7 +231,7 @@
                                         <b>24h changes <span>+15</span></b>
                                     </li>
                                     <li>
-                                        <span class="icon" style="background: #FFF6DE;color: #FFA10B;"><i class="fal fa-bookmark"></i></span>
+                                        <span class="icon" style="background: #FFF6DE;color: #FFA10B;"><i class="far fa-bookmark"></i></span>
                                         <h4>1456 <span>Product Saves</span></h4> 
                                         <b>24h changes <span>+15</span></b>
                                     </li>
