--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
         <title>Site Title Here</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="shortcut icon" type="image/x-icon" href="#">
+		<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.svg">
         <!-- Place favicon.ico in the root directory -->
         
 		<!-- CSS here -->
