--- a/product.html
+++ b/product.html
@@ -122,7 +122,12 @@
                             <div class="inf-btns">
                                 <button type="button"><span><i class="fas fa-thumbs-up"></i></span> 17071 </button>
                                 <button type="button"><span><i class="fas fa-bookmark"></i></span> 5667 </button>
-                                <button type="button"><span><i class="fas fa-star"></i></span> 4.6 </button>
+                                <button type="button" class="extmenu"><span><i class="fas fa-star"></i></span> 4.6 
+                                    <ul>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                    </ul>
+                                </button>
                                 <button type="button"><span><i class="fas fa-comment-alt"></i></span> 455 </button>
                                 <button type="button"><span><i class="fas fa-eye"></i></span> 6000 </button>
                                 <button type="button" class="extmenu"><span><i class="fas fa-share-alt"></i></span> 556 
