--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <div class="products">
 
       <div class="product-card">
+        <button type="button">Sponsered</button>
         <div class="card-header">
 
           <div class="user-info">
