--- a/profile.html
+++ b/profile.html
@@ -32,40 +32,40 @@
                         <div class="menu-area">
                             <nav>
                                 <ul>
-                                    <li><a href="task-history.html"><i class="fas fa-th-large"></i> Task list</a></li>
+                                    <li><a href="product-listing.html"><i class="fas fa-th-large"></i> Product list</a></li>
                                     <li><a href="blog.html"><i class="far fa-globe-americas"></i> News</a></li> 
                                     <li><a href="#"><i class="fas fa-question-circle"></i> Help</a></li>  
-                                    <li><a href="category.html" class="megaic"><i class="fas fa-chevron-down"></i> Category</a>
+                                    <li><a href="category.html" class="megaic">Category <i class="fas fa-chevron-down"></i></a>
                                         <div class="mega-menu"> 
                                             <ul>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
                                             </ul>
                                             <ul>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
                                             </ul>
                                             <ul>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
                                             </ul>
                                             <ul>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
                                             </ul>
                                             <ul>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
-                                                <li><a href="#">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
+                                                <li><a href="blog.html">Blog content </a></li>
                                             </ul>
                                         </div>
                                     </li> 
@@ -76,13 +76,13 @@
                     <div class="col-lg-3 col-6">
                         <div class="header-action">
                             <div class="hnumbs">
-                                <button type="button"><i class="fal fa-plus"></i></button> <span><img src="assets/img/bxs-coin-stack.png" alt=""> 2023</span>
+                                <button type="button"><a href="profile.html" style="color: #fff;"><i class="fal fa-plus"></i></a></button> <span><img src="assets/img/bxs-coin-stack.png" alt=""> 2023</span>
                             </div>
                             <ul class=" d-none d-md-block ">
                                 <li class="headerProfile"><a href="#" class="avt"><img src="assets/img/avater.png" alt=""><i class="far fa-angle-down"></i></a>
                                     <ul>
                                         <li><a href="profile.html"><i class="fas fa-user"></i> My profile </a></li>
-                                        <li><a href="task-history.html"><i class="fas fa-th-large"></i> Task history</a></li>
+                                        <li><a href="product-listing.html"><i class="fas fa-th-large"></i> Product List</a></li>
                                         <li class="mode"><a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 6C12.552 6 13 5.553 13 5V3C13 2.447 12.552 2 12 2C11.448 2 11 2.447 11 3V5C11 5.553 11.448 6 12 6ZM21 11H19C18.448 11 18 11.447 18 12C18 12.553 18.448 13 19 13H21C21.552 13 22 12.553 22 12C22 11.447 21.552 11 21 11ZM5 11C5.552 11 6 11.447 6 12C6 12.553 5.552 13 5 13H3C2.448 13 2 12.553 2 12C2 11.447 2.448 11 3 11H5ZM6.2207 5.0283C5.8237 4.6453 5.1907 4.6573 4.8067 5.0533C4.4227 5.4503 4.4337 6.0843 4.8307 6.4673L6.2697 7.8573C6.4647 8.0453 6.7147 8.1373 6.9647 8.1373C7.2267 8.1373 7.4877 8.0353 7.6837 7.8323C8.0677 7.4353 8.0567 6.8013 7.6597 6.4183L6.2207 5.0283ZM17.7302 7.8577C17.5352 8.0447 17.2852 8.1377 17.0352 8.1377C16.7732 8.1377 16.5122 8.0347 16.3162 7.8317C15.9322 7.4357 15.9432 6.8017 16.3402 6.4177L17.7792 5.0287C18.1782 4.6457 18.8102 4.6577 19.1932 5.0537C19.5772 5.4497 19.5662 6.0837 19.1692 6.4677L17.7302 7.8577ZM12 18C11.448 18 11 18.447 11 19V21C11 21.553 11.448 22 12 22C12.552 22 13 21.553 13 21V19C13 18.447 12.552 18 12 18ZM16.316 16.1676C16.7 15.7716 17.333 15.7596 17.73 16.1426L19.169 17.5326C19.566 17.9156 19.577 18.5496 19.193 18.9466C18.997 19.1496 18.736 19.2516 18.474 19.2516C18.224 19.2516 17.974 19.1596 17.779 18.9716L16.34 17.5816C15.943 17.1986 15.932 16.5646 16.316 16.1676ZM6.27 16.1426L4.831 17.5326C4.434 17.9156 4.423 18.5496 4.807 18.9466C5.003 19.1496 5.264 19.2516 5.526 19.2516C5.776 19.2516 6.026 19.1596 6.221 18.9716L7.66 17.5816C8.057 17.1986 8.068 16.5646 7.684 16.1676C7.301 15.7716 6.668 15.7596 6.27 16.1426ZM8 12C8 9.794 9.794 8 12 8C14.206 8 16 9.794 16 12C16 14.206 14.206 16 12 16C9.794 16 8 14.206 8 12Z" fill="#282B31"/>
                                             <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="20" height="20">
@@ -128,6 +128,10 @@
                                     <img src="assets/img/Avatar.png" alt="">
                                     <button type="button">+ Upload new photo</button>
                                 </div>
+                                <div class="avaters mt-3">
+                                    <img src="assets/img/Avatar.png" alt="">
+                                    <button type="button">+ Upload new cover</button>
+                                </div>
                                 <div class="social">
                                     <h5 class="blk-tl">Social media</h5>
                                     <ul>
@@ -166,7 +170,29 @@
                                                 </svg> 
                                             </span></a>
                                         </li>
-                                        <li class="list-item"><a href="#"><div><img src="assets/img/vic.png" alt=""> VKontakte</div> <span>
+                                        <li class="list-item"><a href="#"><div><img src="assets/img/teligram.png" alt=""> Teligram</div> <span>
+                                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="10" cy="10" r="10" fill="#50D86A"/>
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.75356 13.4999C8.59256 13.4999 8.43856 13.4334 8.32831 13.3162L5.49156 10.2951C5.27047 10.0606 5.28272 9.69134 5.51722 9.47084C5.75231 9.25034 6.12156 9.26201 6.34147 9.49651L8.74773 12.0579L13.6524 6.69009C13.8706 6.45151 14.2392 6.43576 14.4772 6.65276C14.7146 6.86976 14.731 7.23901 14.514 7.47642L9.18406 13.3098C9.07498 13.4299 8.91981 13.4988 8.75764 13.4999H8.75356Z" fill="white"/>
+                                                <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="5" y="6" width="10" height="8">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.75356 13.4999C8.59256 13.4999 8.43856 13.4334 8.32831 13.3162L5.49156 10.2951C5.27047 10.0606 5.28272 9.69134 5.51722 9.47084C5.75231 9.25034 6.12156 9.26201 6.34147 9.49651L8.74773 12.0579L13.6524 6.69009C13.8706 6.45151 14.2392 6.43576 14.4772 6.65276C14.7146 6.86976 14.731 7.23901 14.514 7.47642L9.18406 13.3098C9.07498 13.4299 8.91981 13.4988 8.75764 13.4999H8.75356Z" fill="white"/>
+                                                </mask>
+                                                <g mask="url(#mask0)">
+                                                <rect x="3" y="3" width="14" height="14" fill="white"/>
+                                                </g>
+                                            </svg>
+                                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9 5.25C9.828 5.25 10.5 4.578 10.5 3.75C10.5 2.922 9.828 2.25 9 2.25C8.172 2.25 7.5 2.922 7.5 3.75C7.5 4.578 8.172 5.25 9 5.25ZM9 7.5C8.172 7.5 7.5 8.172 7.5 9C7.5 9.828 8.172 10.5 9 10.5C9.828 10.5 10.5 9.828 10.5 9C10.5 8.172 9.828 7.5 9 7.5ZM7.5 14.25C7.5 13.422 8.172 12.75 9 12.75C9.828 12.75 10.5 13.422 10.5 14.25C10.5 15.078 9.828 15.75 9 15.75C8.172 15.75 7.5 15.078 7.5 14.25Z" fill="#8E8E96"/>
+                                                <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="7" y="2" width="4" height="14">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9 5.25C9.828 5.25 10.5 4.578 10.5 3.75C10.5 2.922 9.828 2.25 9 2.25C8.172 2.25 7.5 2.922 7.5 3.75C7.5 4.578 8.172 5.25 9 5.25ZM9 7.5C8.172 7.5 7.5 8.172 7.5 9C7.5 9.828 8.172 10.5 9 10.5C9.828 10.5 10.5 9.828 10.5 9C10.5 8.172 9.828 7.5 9 7.5ZM7.5 14.25C7.5 13.422 8.172 12.75 9 12.75C9.828 12.75 10.5 13.422 10.5 14.25C10.5 15.078 9.828 15.75 9 15.75C8.172 15.75 7.5 15.078 7.5 14.25Z" fill="white"/>
+                                                </mask>
+                                                <g mask="url(#mask0)">
+                                                <rect width="18" height="18" fill="#8E8E96"/>
+                                                </g>
+                                                </svg> 
+                                            </span></a>
+                                        </li>
+                                        <li class="list-item"><a href="#"><div><img src="assets/img/insta.png" alt=""> Instagram </div> <span>
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <circle cx="10" cy="10" r="10" fill="#50D86A"/>
                                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M8.75356 13.4999C8.59256 13.4999 8.43856 13.4334 8.32831 13.3162L5.49156 10.2951C5.27047 10.0606 5.28272 9.69134 5.51722 9.47084C5.75231 9.25034 6.12156 9.26201 6.34147 9.49651L8.74773 12.0579L13.6524 6.69009C13.8706 6.45151 14.2392 6.43576 14.4772 6.65276C14.7146 6.86976 14.731 7.23901 14.514 7.47642L9.18406 13.3098C9.07498 13.4299 8.91981 13.4988 8.75764 13.4999H8.75356Z" fill="white"/>
@@ -194,14 +220,10 @@
                         </div>
                         <div class="col-lg-5 col-md-6">
                             <div class="profile-info">
-                                <form action="">
+                                <form action=""> 
                                     <label for="#">
-                                        Dribbble Link
-                                        <input type="text" value="https://dribbble.com/alexander-herzog">
-                                    </label>
-                                    <label for="#">
-                                        Behance Link
-                                        <input type="text" value="https://www.behance.net/dukebafor">
+                                        Referral Link
+                                        <input type="text" value="https://www.Referral.net/dukebafor" readonly>
                                     </label>
                                     <label for="#">
                                         E-Mail
@@ -234,15 +256,15 @@
                                     </li>
                                     <li>
                                         <span class="icon" style="background: #F1DEFF;color: #A86CE4;"><i class="fas fa-user-plus"></i></span>
-                                        <h4>15 <span>New users invited</span></h4>
+                                        <h4>15 <span>Comments</span></h4>
                                     </li>
                                     <li>
-                                        <span class="icon" style="background: #DEFFE5;color: #50D86A;"><i class="fal fa-calendar-week"></i></span>
-                                        <h4>329 <span>Days since registration</span></h4>
+                                        <span class="icon" style="background: #DEFFE5;color: #50D86A;"><i class="fas fa-bookmark"></i></span>
+                                        <h4>329 <span>Save</span></h4>
                                     </li>
                                     <li>
                                         <span class="icon" style="background: #FFF6DE;color: #FFA10B;"><i class="fas fa-usd-circle"></i></span>
-                                        <h4>$ 1456,23 <span>Real money spent</span></h4>
+                                        <h4>$ 1456,23 <span>Total balance</span></h4>
                                     </li>
                                 </ul>
                             </div>
@@ -286,8 +308,8 @@
         <!-- Footer-bar START -->
         <div class="footer-bar d-block d-md-none"> 
             <ul>
-                <li><a href="#"><i class="fas fa-th-large"></i> Task list</a></li>
-                <li><a href="#"><i class="far fa-globe-americas"></i> News</a></li> 
+                <li><a href="product-listing.html"><i class="fas fa-th-large"></i> Product list</a></li>
+                <li><a href="blog.html"><i class="far fa-globe-americas"></i> News</a></li> 
                 <li><a href="#"><i class="fas fa-question-circle"></i> FAQ</a></li>  
                 <li><a href="#"><i class="far fa-bars"></i> Menu</a></li>  
             </ul>
